<resources>
    <string name="file_provider_authority" translatable="false">com.app.scanny.fileprovider</string>
    <string name="start_capture">Start Capture</string>
    <string name="image_location">Images</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="error_text">Ooops .... Something is not right</string>
    <string name="nickname">Nickname</string>
    <string name="folder_path">Go To Folder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bb_signup_text">Please create a nickname</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="notification">Notificatio</string>
    <string name="message">Messages</string>
    <string name="write_your_bols">Write your bols here</string>
    <string name="submit">Submit</string>
    <string name="no_bols">Nothing to show</string>
    <string name="native_ad_unit_id_view">ca-app-pub-6848333716076512/4253602482</string>
    <string name="banner_ad_unit_id_view">ca-app-pub-6848333716076512/7422583503</string>
    <string name="native_ad_unit_id_view_man">ca-app-pub-6848333716076512~9505929162</string>
    <string name="banner_ad_unit_id_view_man">ca-app-pub-6848333716076512~9505929162</string>
    <string name="banner_ad_temp">ca-app-pub-3940256099942544/6300978111</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="cities">Cities</string>
    <string name="skills">Skills</string>
    <string name="users">User Type</string>
    <string name="projects">Projects</string>
    <string name="testionials">Testimonials</string>
    <string name="add">Add</string>
    <string name="working">Working</string>
    <string name="cannot_add_pro">Cannot add more than one project</string>
    <string name="cannot_add_test">Cannot add more than one testimonial</string>
    <string name="fill_data">Please add name, email and phone</string>
    <string name="fill_skills">Please fill at least one skill and location</string>
    <string name="locations">Locations</string>
    <string name="no_data">No Data Available</string>
    <string name="select_values">Please select at least one value</string>
    <array name="user_type">
        <item>Recruiter</item>
        <item>Candidate</item>
    </array>

</resources>