<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="ccHomeViewodel"
            type="com.app.scanny.careercoop.viewodels.CcHomeViewModel" />
        <import
            type="android.view.View" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
        android:background="@drawable/background_gradient"
        android:layout_width="match_parent"
       android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".careercoop.fragments.CareerCoopHome">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="@{ccHomeViewodel.showForm ? View.VISIBLE : View.GONE}"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/edt_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            style="@style/TextInputLayoutTheme"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputEditTextTheme"
                android:text="@={ccHomeViewodel.name}"
                android:hint="@string/name"
               />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/edt_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            style="@style/TextInputLayoutTheme"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/edt_name"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={ccHomeViewodel.phone}"
                style="@style/TextInputEditTextTheme"
                android:hint="@string/phone"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/edt_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            style="@style/TextInputLayoutTheme"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/edt_phone"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={ccHomeViewodel.email}"
                style="@style/TextInputEditTextTheme"
                android:hint="@string/email"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_cities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/cities"
            android:textColor="@color/colourWhite"
            style="@style/BolTextStyle"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_email" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup_cities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_cities">

            <!-- Chips can be declared here, or added dynamically. -->

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/tv_skills"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/skills"
            android:textColor="@color/colourWhite"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chipGroup_cities" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup_skills"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_skills">

        </com.google.android.material.chip.ChipGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

        <ProgressBar
            android:layout_width="80dp"
            android:layout_gravity="center"
            android:layout_height="80dp"
            android:visibility="@{ccHomeViewodel.showForm ? View.GONE : View.VISIBLE}"
            />
    </FrameLayout>
</layout>